<resources>
    <string name="app_name">哦啦语音助手</string>
    <string name="teststring">哦啦语音</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">设置</string>
    <string name="menu_othersettings">其它设置</string>
    <string name="menu_dump">保存当前对话</string>
    <string name="title_activity_main">哦啦语音助手</string>
    <string name="app_id_1">4fb3093f</string>
    <string name="app_id">4f595817</string>
    <string name="capture_voice">我要说话</string>
    <string name="settings">设置</string>
    <string name="othersettings">其它设置</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="select">选择</string>
    <string name="connect_failed">服务器连接失败!</string>
    <string name="server_dataerror">您的网络似乎不太理想啊！</string>
    <string name="connected_to">已连接到</string>
    <string name="connected">已连接到服务器。</string>
    <string name="connecting">正在连接服务器。</string>
    <string name="recognize_failed">无法识别结果</string>
    <string name="send_sms_failed">给%1$s发送短信失败！</string>
    <string name="send_sms_success">给%1$s发送短信成功！</string>
    <string name="server_ip">服务器IP地址</string>
    <string name="server_port">服务器端口号</string>
    <string name="auto_start_record">智能开启语音功能</string>
    <string name="voice_wakeup">语音唤醒功能</string>
    <string name="use_internet_server">外网服务器</string>
    <string name="use_intranet_server">内网服务器</string>
    <string name="use_custom_server">自定义IP</string>
    <string name="use_http_server">http连接方式 </string>
    <string name="use_socket_server">Socket连接方式 </string>
    <string name="save_file_in">文件保存在：</string>
    <string name="save_file_failed">文件保存失败</string>
    <string name="tab_main">主页</string>
    <string name="tab_voice">语音助手</string>
    <string name="tab_help">帮助</string>
    <string name="tab_login">登录</string>
    <string name="tab_register">注册</string>
    <string name="tab_exit_login">退出登录</string>
    <string name="display_floatview">悬浮视窗</string>
    <string name="send">发送</string>
    <string name="background">背景</string>
    <string name="talkicon">对话图示</string>
    <string name="setting_basicsetting">基础设置</string>
    <string name="setting_switch">选择</string>
    <string name="setting_select">选择图示</string>
    <string name="setting_ttsvoicesetting">语音播报</string>
    <string name="setting_voicesetting">语音设置</string>
    <string name="setting_voicetype">朗读人声</string>
	<string name="setting_voicetype_vadio">语音设置</string>
    <string name="setting_musicsetting">音乐设置</string>
    <string name="setting_system">系统</string>
    <string name="setting_versionupdate">版本更新</string>
    <string name="setting_aboutus">联系我们</string>
    <string name="setting_searchonlinemusic">搜索在线音乐</string>
    <string name="setting_listenandsave">边听边存</string>
    <string name="setting_musicdownloadpath">默认下载路径</string>
    <string name="setting_selectpic">选择图片</string>
    <string name="setting_usercall">称呼设置</string>
    <string name="setting_prompt">提示</string>
    <string name="setting_map">地图设置</string>
    <string name="setting_map_display">显示设置</string>
    <string name="setting_map_traveltype">乘车偏好</string>
    <string name="setting_map_traffic">实际路况</string>
    <string name="setting_default_usercall">主人</string>
    <string name="centigrade">℃</string>
    <string name="weather">Weather</string>
    <string name="stock_price_start_lable">开　盘</string>
    <string name="stock_price_start_lable2">开盘价</string>
    <string name="stock_price_high_lable">最　高</string>
    <string name="stock_price_low_lable">最　低</string>
    <string name="stock_volume_lable">成交量</string>
    <string name="stock_turnover_lable">换手率</string>
    <string name="stock_amount_lable">成交额</string>
    <string name="stock_price_end_lable">昨收价</string>
    <string name="msg_deleted_all_data">当前数据已被删除！</string>
    <string name="weibo_attention">关注</string>
    <string name="weibo_funs">粉丝</string>
    <string name="weibo_num">微博</string>
    <string name="download">下载</string>
    <string name="img_content_discription">image</string>
    <string name="music_the_player_is_closed">当前播放器已关闭</string>
    <string name="music_play_fail">播放失败</string>
    <string name="music_download_fail">歌曲下载失败，自动跳到下一首。</string>
    <string name="music_is_last_music">已经是第一首歌了</string>
    <string name="music_last_song">已经是最后一首了</string>
    <string name="music_list_is_null">播放列表为空</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="done">完成</string>
    <string name="login_username_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login_phone_hint">手机号码</string>
    <string name="login_user_login">用户登录</string>
    <string name="login_please_input_username">请输入用户名</string>
    <string name="login_please_input_password">请输入密码</string>
    <string name="login_username_to_long_alert">请输入有效的用户名</string>
    <string name="login_exit">退出登录</string>
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="change_pwd">修改密码</string>
    <string name="login_why_register">为什么要注册？</string>
    <string name="register_cause">注册有很多好处哦</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="repeat_identifying_code">重发验证码</string>
    <string name="submit_identifying_code">提交验证码</string>
    <string name="forgetpwd_please_input_newpwd">请输入新密码</string>
    <string name="forgetpwd_please_input_code">请输入验证码</string>
    <string name="forgetpwd_please_input_newpwd_again">再次输入新密码</string>
    <string name="register_username_is_null_alert">请输入用户名</string>
    <string name="register_password_is_null_alert">请输入密码</string>
    <string name="register_fail_plaease_try_again">注册失败，请重试。</string>
    <string name="register_pwd_again">再次输入密码</string>
    <string name="register_user_email">用户邮箱</string>
    <string name="register_username_length_alert">用户名6~15个字符</string>
    <string name="register_password_length_alert">密码6~15个字符</string>
    <string name="register_username_wrongful">用户名只能由字母、数字、下划线组成，且以字母开头的6~15个字符</string>
    <string name="register_phone_wrongful">请输入 正确的手机号码</string>
    <string name="register_password_unlike">两次密码不一致</string>
    <string name="register_email_wrongful">邮箱格式不正确</string>
    <string name="register_email_is_null">请输入邮箱</string>
    <string name="user_register">用户注册</string>
    <string name="account_center">账户中心</string>
    <string name="account_identified">已验证</string>
    <string name="account_not_identify">未验证</string>
    <string name="account_obtain_identify_status">状态获取中&#8230;</string>
    <string name="account_wait_user_to_identifying">等待用户验证</string>
    <string name="phone_identifying">手机号验证</string>
    <string name="phone_change">更换手机号</string>
    <string name="phone_number">手机号</string>
    <string name="phone_please_input_phone">请输入手机号</string>
    <string name="phone_number_colon">手机号：</string>
    <string name="phone_please_input_new_phone">请输入新的手机号</string>
    <string name="phone_code_send_ok">验证码已发送，请注意查收，1分钟后未收到请重试</string>
    <string name="phone_id_pwd_not_matched">用户名与密码不匹配</string>
    <string name="phone_code_input_error">验证码输入有误，请检查后重新输入</string>
    <string name="phone_code_submit_failure">验证码提交失败</string>
    <string name="phone_bind_ok">手机号已成功验证</string>
    <string name="new_phone_bind_ok">新的手机号已绑定成功</string>
    <string name="setting_nickname">昵称设置</string>
    <string name="submit_modify">提交修改</string>
    <string name="nickname_submit_ok">您的用户昵称已成功修改</string>
    <string name="nickname_toolong">昵称长度不能多于15个字符</string>
    <string name="account_phone_not_matched">账户和手机号未绑定或不匹配</string>
    <string name="pwd_modify_ok">您的密码已经修改成功，请重新登录</string>
    <string name="phone_input_error">手机号输入有误，请检查后重新输入</string>
    <string name="reset_pwd_failed">密码修改失败，请重新操作</string>
    <string name="str_coupon">优惠券</string>
    <string name="str_app">应用推荐</string>
    <string name="new_phone_same_as_old">新的手机号和目前绑定的手机号一样，请重新输入</string>
    <string name="phone_code_interval_less_than_60s">验证码发送间隔时间小于60秒</string>
    <string name="phone_binded_please_input_other">此手机号已被绑定，请输入其他手机号</string>
    <string name="pwd_error_please_input_again">密码错误，请重新输入</string>
    <string name="account_authentication">账户验证</string>
    <string name="lets_go_authentication">马上去验证</string>
    <string name="account_not_bind_phone">您的账号尚未绑定手机号</string>
    <string name="nickname_wrongful">昵称只能由字母、数字、中文线组成。</string>
    <string name="exit_please_again">再按一次退出哦啦语音</string>
    <string name="pack_up">收起</string>
    <string name="all">全部</string>
    <string name="music_add_download_list">已加入下载列表！</string>
    <string name="call_record">通话记录</string>
    <string name="resource_lable">来源:</string>
    <string name="time_lable">时间:</string>
    <string name="select_phone_num">选择号码</string>
    <string name="downloading">下载中</string>
    <string name="downloading2">下载中&#8230;</string>
    <string name="blue_connected">已配对</string>
    <string name="blue_disconnected">未配对</string>
    <string name="hotel_grade">分</string>
    <string name="version_info">版本信息</string>
    <string name="software_type">软件类型:</string>
    <string name="software_classification">所属分类:</string>
    <string name="software_version">软件版本:</string>
    <string name="update_time">更新时间:</string>
    <string name="system_requirement">系统要求:</string>
    <string name="check_update">检查更新</string>
    <string name="contact_us">联系我们</string>
    <string name="official_website">官网:</string>
    <string name="customer_service">客服:</string>
    <string name="free">免费</string>
    <string name="convenience_of_life">便捷生活</string>
    <string name="need_version">Android2.2版本以上</string>
    <string name="unknow">未知</string>
    <string name="rebate">折</string>
    <string name="one_plus">1+</string>
    <string name="minute">分</string>
    <string name="hour">时</string>
    <string name="day">天</string>
    <string name="meter">米</string>
    <string name="kilometer">千米</string>
    <string name="alert">提示！</string>
    <string name="exit_message">您确定要退出吗？</string>
    <string name="login_success">登录成功！</string>
    <string name="login_fail">登录失败！</string>
    <string name="login_loading_title">正在登录</string>
    <string name="login_loading_message">登录中，请稍候&#8230;</string>
    <string name="register_loading_title">正在注册</string>
    <string name="register_loading_message">正在提交注册信息，请稍候&#8230;</string>
    <string name="register_fail">注册失败！</string>
    <string name="register_success">注册成功！</string>
    <string name="register_username_disabled">用户名已存在！</string>
    <string name="register_license_title">哦啦注册协议</string>
    <string name="register_license_ok">我知道了</string>
    <string name="register_license_not_agree">请先阅读并同意用户协议</string>
    <string name="click_to_download">请点击下载</string>
    <string name="poi_telephone_lable">电话：</string>
    <string name="poi_telephone_empty">无</string>
    <string name="from_lable">来自：</string>
    <string name="route_location_begin_label">出发地：</string>
    <string name="route_location_end_label">目的地：</string>
    <string name="route_location_local">当前位置</string>
    <string name="sms_send">发出</string>
    <string name="sms_unread">未读</string>
    <string name="sms_read">已读</string>
    <string name="poi_no_detail">没有详细信息</string>
    <string name="save">保存</string>
    <string name="close">关闭</string>
    <string name="setting_tipsmessage_lock">锁屏功能</string>
    <string name="setting_tipsmessage_lockhome">锁定HOME键</string>
    <string name="setting_basicsetting_unlock">未锁定</string>
    <string name="setting_basicsetting_lock">已锁定</string>
    <string name="setting_basicsetting_unstart">未开启</string>
    <string name="lockhome_firststep">第一步</string>
    <string name="lockhome_firststeptips">点击"清除默认设置"按钮，如下图：</string>
    <string name="lockhome_stepbtn">马上去操作</string>
</resources>