<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/setting_content_color" >

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:drawableLeft= "@drawable/back"
        android:padding="10dp"
       	android:background="@color/app_bg"
        android:textColor="@color/setting_text_color"
        android:textSize="@dimen/setting_title_text_size"        
        android:text="@string/forget_pwd" />

    <LinearLayout
        android:id="@+id/layout_get_code"
        android:visibility="visible" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_title"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="10dp" >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg_input"
            android:hint="@string/register_username_is_null_alert"
            android:inputType="textCapCharacters" 
            android:textColorHint="@color/login_txt_forget_pwd"
            android:textColor="@android:color/darker_gray"
            android:maxLength="15"
            />
        
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_bg_input"
            android:hint="@string/phone_please_input_phone"
            android:inputType="phone" 
            android:textColorHint="@color/login_txt_forget_pwd"
            android:textColor="@android:color/darker_gray"
            android:maxLength="15"
            />
        
        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_blue"
            android:text="@string/get_identifying_code"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_txt_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_reset_pwd"
        android:visibility="gone" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_title"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg_input"
            android:hint="@string/forgetpwd_please_input_newpwd"
            android:inputType="textPassword" 
            android:textColorHint="@color/login_txt_forget_pwd"
            android:textColor="@android:color/darker_gray"
            android:maxLength="15"
            />
        
      	<EditText
            android:id="@+id/et_pwd_confirm"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg_input"
            android:hint="@string/forgetpwd_please_input_newpwd_again"
            android:inputType="textPassword" 
            android:textColorHint="@color/login_txt_forget_pwd"
            android:textColor="@android:color/darker_gray"
            android:maxLength="15"
            />
        
        <EditText
            android:id="@+id/et_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_bg_input"
            android:hint="@string/forgetpwd_please_input_code"
            android:inputType="textCapCharacters" 
            android:textColorHint="@color/login_txt_forget_pwd"
            android:textColor="@android:color/darker_gray"
            android:maxLength="15"
            />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_modify_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:background="@drawable/login_btn_blue"
                android:text="@string/change_pwd"
                android:textColor="@android:color/white"
                android:textSize="@dimen/login_txt_btn" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content">
            </TextView>
            
            <Button
                android:id="@+id/btn_repeat_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="0dp"
                android:background="@drawable/login_btn_gray"
                android:text="@string/repeat_identifying_code"
                android:textColor="@android:color/white"
                android:textSize="@dimen/login_txt_btn" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>