<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/setting_content_color"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_bg"
        android:drawableLeft="@drawable/back"
        android:gravity="left|center_vertical"
        android:padding="10dp"
        android:text="@string/login_user_login"
        android:textColor="@color/setting_text_color"
        android:textSize="@dimen/setting_title_text_size" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/setting_content_color"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg_input"
            android:hint="@string/login_username_hint"
            android:inputType="textCapCharacters"
            android:maxLength="15"
            android:textColor="@android:color/white"
            android:textColorHint="@color/login_txt_edit" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_bg_input"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword|textCapWords"
            android:maxLength="15"
            android:textColor="@android:color/white"
            android:textColorHint="@color/login_txt_edit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_btn_blue"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_txt_btn" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/login_btn_gray"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_txt_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_forget_pwd"
            android:textColorHint="@color/login_txt_forget_pwd"
            android:textSize="@dimen/login_forget_pwd"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_why_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_why_register"
            android:textColorHint="@color/login_txt_forget_pwd"
            android:textSize="@dimen/login_forget_pwd"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>