<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/setting_content_color"
    android:orientation="vertical"
     >

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_bg"
        android:drawableLeft="@drawable/back"
        android:gravity="left|center_vertical"
        android:padding="10dp"
        android:text="@string/user_register"
        android:textColor="@color/setting_text_color"
        android:textSize="@dimen/setting_title_text_size" />
 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/setting_content_color"
        android:orientation="vertical"
        android:padding="10dp" >
    <EditText
        android:id="@+id/et_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_bg_input"
        android:hint="@string/login_username_hint"
        android:inputType="textEmailAddress"
        android:maxLength="15"
        android:textColor="@android:color/white"
        android:textColorHint="@color/login_txt_edit" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_bg_input"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:maxLength="15"
        android:textColor="@android:color/white"
        android:textColorHint="@color/login_txt_edit" />

    <EditText
        android:id="@+id/et_password_again"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_bg_input"
        android:hint="@string/register_pwd_again"
        android:inputType="textPassword"
        android:maxLength="15"
        android:textColor="@android:color/white"
        android:textColorHint="@color/login_txt_edit" />

    <EditText
        android:id="@+id/et_phone_num"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_bg_input"
        android:hint="@string/login_phone_hint"
        android:inputType="phone"
        android:maxLength="20"
        android:textColor="@android:color/white"
        android:textColorHint="@color/login_txt_edit"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_bg_input"
        android:hint="@string/register_user_email"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:textColor="@android:color/white"
        android:textColorHint="@color/login_txt_edit"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我已阅读并同意"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="《用户协议》"
            android:textColor="#0066ff"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_btn_blue"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_txt_btn" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/login_btn_gray"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_txt_btn" />
    </LinearLayout>

</LinearLayout>